Reindex active documents only
